Actualizando parte 2 terminada de 22003085_LuisTun_Laboratorio3.ipynb

--- a/22003085_LuisTun_Laboratorio3.ipynb
+++ b/22003085_LuisTun_Laboratorio3.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "id": "51fbe8f6-d48c-456b-ae6b-b5e9386eddeb",
    "metadata": {
     "collapsed": false
@@ -101,7 +101,7 @@
     "\n",
     "# Muestra los últimos 10 elementos por pantalla\n",
     "ultimos_10_elementos = enteros_pares_decrecientes[-10:]\n",
-    "print(\"Los 10 últimos elementos son:\", ultimos_10_elementos)"
+    "print(f\"Los 10 últimos elementos son: {ultimos_10_elementos}\")"
    ]
   },
   {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "id": "0f76bc3b-907e-4b25-a820-e722fdf31910",
    "metadata": {
     "collapsed": false
@@ -136,11 +136,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subarray [0 3 7 4]:\n",
-      "[0 3 7 4]\n",
+      "Subarray 1: \n",
+      " [0 3 7 4]\n",
       "\n",
-      "Subarray [[2 5] [8 5]]:\n",
-      "[[2 5]\n",
+      "Subarray 2: \n",
+      " [[2 5]\n",
       " [8 5]]\n"
      ]
     }
@@ -158,14 +158,12 @@
     "\n",
     "# Selecciona el subarray [0 3 7 4]\n",
     "subarray1 = mi_array[1, 0:5]\n",
-    "print(\"Subarray [0 3 7 4]:\")\n",
-    "print(subarray1)\n",
+    "print(f\"Subarray 1: \\n {subarray1}\")\n",
     "\n",
     "# Selecciona el subarray [[2 5]\n",
     "#                           [8 5]]\n",
     "subarray2 = mi_array[0:3:2, 0:3:2]\n",
-    "print(\"\\nSubarray [[2 5] [8 5]]:\")\n",
-    "print(subarray2)"
+    "print(f\"\\nSubarray 2: \\n {subarray2}\")"
    ]
   },
   {
@@ -175,8 +173,183 @@
     "collapsed": false
    },
    "source": [
-    "# "
+    "# 4) Dados los arrays a = [1, 4, 2, 7] y b = [1, 3, 2, 9], obtenga la media aritmética de la diferencia (a-b).\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "cd10588a-0ad4-44b5-8b29-f8d2207e81ae",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La diferencia es: [ 0  1  0 -2]\n",
+      "La media aritmética de la diferencia (a - b) es: -0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define los arrays a y b\n",
+    "a = np.array([1, 4, 2, 7])\n",
+    "b = np.array([1, 3, 2, 9])\n",
+    "\n",
+    "# Calcula la diferencia entre los arrays\n",
+    "diferencia = a - b\n",
+    "\n",
+    "# Calcula la media aritmética de la diferencia\n",
+    "media_aritmetica = np.mean(diferencia)\n",
+    "\n",
+    "print(f\"La diferencia es: {diferencia}\")\n",
+    "print(f\"La media aritmética de la diferencia (a - b) es: {media_aritmetica}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e6228e7-33ce-4f0a-9c96-c728968c8fab",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# 5) Tengo valores de cordenadas (x, y) en las columnas del array\n",
+    "    1.33 4.5\n",
+    "    30.0 10.7\n",
+    "    70.2 0.5\n",
+    "Agregue a este array las coordenadas (37.1, -3.6). Muestre en pantalla las dimensiones del nuevo array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "bc73c167-aa99-40c1-953d-4fb08a2185c6",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original: \n",
+      " [[ 1.33  4.5 ]\n",
+      " [30.   10.7 ]\n",
+      " [70.2   0.5 ]]\n",
+      "Nuevo array: \n",
+      " [[ 1.33  4.5 ]\n",
+      " [30.   10.7 ]\n",
+      " [70.2   0.5 ]\n",
+      " [37.1  -3.6 ]]\n",
+      "Dimensiones del nuevo array: (4, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Array original\n",
+    "array_original = np.array([\n",
+    "    [1.33, 4.5],\n",
+    "    [30.0, 10.7],\n",
+    "    [70.2, 0.5]\n",
+    "])\n",
+    "\n",
+    "# Nuevas coordenadas a agregar\n",
+    "nuevas_coordenadas = np.array([37.1, -3.6])\n",
+    "\n",
+    "# Agrega las nuevas coordenadas al array original\n",
+    "nuevo_array = np.vstack([array_original, nuevas_coordenadas])\n",
+    "\n",
+    "# Muestra las dimensiones del nuevo array\n",
+    "dimensiones_nuevo_array = nuevo_array.shape\n",
+    "\n",
+    "print(f\"Array original: \\n {array_original}\")\n",
+    "print(f\"Nuevo array: \\n {nuevo_array}\")\n",
+    "print(f\"Dimensiones del nuevo array: {dimensiones_nuevo_array}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afadc41a-f098-442f-ae2f-b8e6bbeb2eef",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# 6) Copie el array del ejercicio anterior. Traspóngalo (Agregue ahora dos nuevos pares de coordenadas: (10.8, 3.0) y (35.8, 12.0).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "8e392b63-2e3b-4f52-abcf-124b7b2f3811",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original: \n",
+      " [[ 1.33  4.5 ]\n",
+      " [30.   10.7 ]\n",
+      " [70.2   0.5 ]\n",
+      " [37.1  -3.6 ]]\n",
+      "Array transpuesto: \n",
+      " [[ 1.33 30.   70.2  37.1 ]\n",
+      " [ 4.5  10.7   0.5  -3.6 ]]\n",
+      "Array transpuesto con nuevas coordenadas: \n",
+      " [[ 1.33 30.   70.2  37.1  10.8  35.8 ]\n",
+      " [ 4.5  10.7   0.5  -3.6   3.   12.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Traspone el array\n",
+    "array_traspuesto = np.transpose(nuevo_array)\n",
+    "\n",
+    "# Agrega dos nuevos pares de coordenadas al array traspuesto\n",
+    "nuevo_par_coordenada1 = np.array([[10.8], [3.0]])\n",
+    "nuevo_par_coordenada2 = np.array([[35.8], [12.0]])\n",
+    "array_traspuesto_extendido = np.hstack([array_traspuesto, nuevo_par_coordenada1, nuevo_par_coordenada2])\n",
+    "\n",
+    "print(f\"Array original: \\n {nuevo_array}\")\n",
+    "print(f\"Array transpuesto: \\n {array_traspuesto}\")\n",
+    "print(f\"Array transpuesto con nuevas coordenadas: \\n {array_traspuesto_extendido}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "9a75d469-122e-488e-97b4-ba4748d5407b",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7f8e65b-a1f3-40a4-ba18-c7fe9ef4a795",
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
