--- a/22003085_LuisTun_Proyecto1.ipynb
+++ b/22003085_LuisTun_Proyecto1.ipynb
@@ -530,7 +530,7 @@
     "collapsed": false
    },
    "source": [
-    "## Para cada variable independiente x :\n",
+    "## 5. Para cada variable independiente x :\n",
     "\n",
     "    * Calcular el coeficiente de correlación entre x y y.\n",
     "    * Graficar x vs y(scatterplot) usando matplotlib.\n",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 83,
    "id": "3b10689d-56cf-42aa-8295-640eae758c30",
    "metadata": {
     "collapsed": false
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "id": "970749c0-f20b-4630-838c-28d6321240d2",
    "metadata": {
     "collapsed": false
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "id": "2282f76e-1570-40d1-9405-dca702b6c1d8",
    "metadata": {
     "collapsed": false
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 86,
    "id": "577df854-370d-4db4-bd38-2ba2d22e73c7",
    "metadata": {
     "collapsed": false
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "id": "49cde2ab-1939-4d46-9e74-ea33a46e8f14",
    "metadata": {
     "collapsed": false
@@ -629,7 +629,7 @@
        "1"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "id": "78999a72-babf-4dcb-b700-03d182cf18b5",
    "metadata": {
     "collapsed": false
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "id": "cc6dc789-e7f3-4e5b-941c-0adcb36304cb",
    "metadata": {
     "collapsed": false
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "id": "40354571-ba58-49b5-af5e-4dc5e8b0061a",
    "metadata": {
     "collapsed": false
